<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_calculator_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.keczaps.calculator.CalculatorMainActivity"
    tools:showIn="@layout/activity_calculator_main"
    android:gravity="center">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/calculation_textview"
            android:text="@string/calculationsStartText"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            />
    </TableRow>

        <GridLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:columnCount="4">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button7text"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button8text"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button9text"/>

            <Button
                android:id="@+id/buttonCLEAR"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/buttonCLEARtext"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button4text"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button5text"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button6text"/>

            <Button
                android:id="@+id/buttonMINUS"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/buttonMINUStext"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button1text"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button2text"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button3text"/>

            <Button
                android:id="@+id/buttonPLUS"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:layout_rowSpan="2"
                android:gravity="center"
                android:layout_gravity="fill_vertical"
                android:background="#dadfe8"
                android:text="@string/buttonPLUStext"/>

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:layout_columnSpan="2"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/button0text"/>

            <Button
                android:id="@+id/buttonEQUALS"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="#dadfe8"
                android:text="@string/buttonEqualstext"/>

                <!--android:layout_column="0"
                android:gravity="center"
                android:layout_row="0"
                android:text="@string/button7text" />

            <Button
                android:id="@+id/button8"
                android:layout_column="1"
                android:gravity="center"
                android:layout_row="0"
                android:text="@string/button8text" />

            <Button
                android:id="@+id/button9"
                android:layout_column="2"
                android:gravity="center"
                android:layout_row="0"
                android:text="@string/button9text" />

            <Button
                android:id="@+id/buttonCLEAR"
                android:layout_column="3"
                android:gravity="center"
                android:layout_row="0"
                android:text="@string/buttonCLEARtext" />

            <Button
                android:id="@+id/button4"
                android:layout_column="0"
                android:gravity="center"
                android:layout_row="1"
                android:text="@string/button4text" />

            <Button
                android:id="@+id/button5"
                android:layout_column="1"
                android:gravity="center"
                android:layout_row="1"
                android:text="@string/button5text" />

            <Button
                android:id="@+id/button6"
                android:layout_column="2"
                android:gravity="center"
                android:layout_row="1"
                android:text="@string/button6text" />

            <Button
                android:id="@+id/buttonMINUS"
                android:layout_column="3"
                android:gravity="center"
                android:layout_row="1"
                android:text="@string/buttonMINUStext" />

            <Button
                android:id="@+id/button1"
                android:layout_column="0"
                android:gravity="center"
                android:layout_row="2"
                android:text="@string/button1text" />

            <Button
                android:id="@+id/button2"
                android:layout_column="1"
                android:gravity="center"
                android:layout_row="2"
                android:text="@string/button2text" />

            <Button
                android:id="@+id/button3"
                android:layout_column="2"
                android:gravity="center"
                android:layout_row="2"
                android:text="@string/button3text" />

            <Button
                android:id="@+id/buttonPLUS"
                android:layout_column="3"
                android:gravity="center"
                android:layout_row="2"
                android:layout_rowSpan="2"
                android:text="@string/buttonPLUStext" />


            <Button
                android:id="@+id/button0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:text="@string/button0text" />

            <Button
                android:id="@+id/buttonEQUALS"
                android:layout_column="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="3"
                android:text="@string/buttonEqualstext" />-->

        </GridLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/credentials_textview"
            android:text="@string/credentialText"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </TableRow>

</TableLayout>